@@ -1,3 +1,8 @@
+Development Portal (2014-08-28 shi)
+==============================
+Style generator page
+
+
 Development Portal (2014-08-21 shi)
 ==============================
 Widget system
@@ -6,6 +11,7 @@ Customisation documentation
 Generator documentation
 Translation documentation
 Fixed paddings and widths for titles and activities list table
+Updated README.md
 
 
 Development Portal (2014-08-20 shi)
